force-app/main/default/objects/Map_Set__c/Map_Set__c.object-meta.xml
<CustomObject>
    <label>Map Set</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Map Set</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Map Sets</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>