force-app/main/default/objects/Map_Set__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Order_File_Generation</relationshipName>
    <type>Lookup</type>
</CustomField>