force-app/main/default/objects/Map_Set__c/fields/Clientele_Mapset_Id__c.field-meta.xml
<CustomField>
    <fullName>Clientele_Mapset_Id__c</fullName>
    <externalId>true</externalId>
    <label>Clientele_Mapset_Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>