force-app/main/default/objects/Map_Set__c/fields/Historical_Traffic_Data_Inrix__c.field-meta.xml
<CustomField>
    <fullName>Historical_Traffic_Data_Inrix__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Historical Traffic Data(Inrix) Purchased</label>
    <type>Checkbox</type>
</CustomField>