force-app/main/default/objects/Map_Set__c/fields/Map_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Map_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Map Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Map Sets (Map Vendor)</relationshipLabel>
    <relationshipName>Map_Sets</relationshipName>
    <type>Lookup</type>
</CustomField>