force-app/main/default/objects/Map_Set__c/fields/Number_of_Licensed_Vehicles__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Licensed_Vehicles__c</fullName>
    <label>Number of Licensed Vehicles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>