force-app/main/default/objects/Map_Set__c/fields/Postal_Areas_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Postal_Areas_Purchased__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Postal Areas Purchased</label>
    <type>Checkbox</type>
</CustomField>