force-app/main/default/objects/Map_Set__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RNA</fullName>
            </value>
            <value>
                <fullName>RTS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>