force-app/main/default/objects/Map_Set__c/fields/Shipped_Date__c.field-meta.xml
<CustomField>
    <fullName>Shipped_Date__c</fullName>
    <inlineHelpText>Enter Date these maps are emailed/shipped to the customer</inlineHelpText>
    <label>Shipped_Date</label>
    <type>Date</type>
</CustomField>