force-app/main/default/objects/Map_Set__c/fields/Vendor_Map_Version_PL__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Map_Version_PL__c</fullName>
    <label>Vendor Map Version</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Digibase - Brazil</fullName>
            </value>
            <value>
                <fullName>DMTI Canmap V.2008.1</fullName>
            </value>
            <value>
                <fullName>GEDAS - Mexico</fullName>
            </value>
            <value>
                <fullName>Geo Strategies</fullName>
            </value>
            <value>
                <fullName>HERE 2016.03 v8</fullName>
            </value>
            <value>
                <fullName>HERE 2016.1 v8</fullName>
            </value>
            <value>
                <fullName>HERE 2016.4 v8</fullName>
            </value>
            <value>
                <fullName>Here 2017.01 Routenet 8</fullName>
            </value>
            <value>
                <fullName>HERE 2017.3</fullName>
            </value>
            <value>
                <fullName>HERE 2017.4</fullName>
            </value>
            <value>
                <fullName>HERE 2018.1</fullName>
            </value>
            <value>
                <fullName>HERE 2019.1</fullName>
            </value>
            <value>
                <fullName>Here2019.3</fullName>
            </value>
            <value>
                <fullName>HERE 2019.4</fullName>
            </value>
            <value>
                <fullName>Here 2020.01</fullName>
            </value>
            <value>
                <fullName>HERE BRAZIL 2017.03</fullName>
            </value>
            <value>
                <fullName>HERE North America 2015.1 v9</fullName>
            </value>
            <value>
                <fullName>HERE North America 2017.1 v9</fullName>
            </value>
            <value>
                <fullName>HERE North America 2017.2 v9</fullName>
            </value>
            <value>
                <fullName>HERE North America 2017.4 v9</fullName>
            </value>
            <value>
                <fullName>LeadDog</fullName>
            </value>
            <value>
                <fullName>MapInfo</fullName>
            </value>
            <value>
                <fullName>MapInfo - Singapore</fullName>
            </value>
            <value>
                <fullName>Mapping Solutions Company Ltd</fullName>
            </value>
            <value>
                <fullName>Maps Provided by VAR</fullName>
            </value>
            <value>
                <fullName>NAV2</fullName>
            </value>
            <value>
                <fullName>Navteq 2011.3</fullName>
                <label>Navteq 2011.3 v8</label>
            </value>
            <value>
                <fullName>NavTeq - Europe</fullName>
            </value>
            <value>
                <fullName>NavTeq - NT02</fullName>
            </value>
            <value>
                <fullName>NavTeq - Oman</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>