force-app/main/default/objects/Map_Set__c/recordTypes/Perpetual.recordType-meta.xml
<RecordType>
    <fullName>Perpetual</fullName>
    <active>true</active>
    <label>Perpetual</label>
</RecordType>