force-app/main/default/objects/Map_Set__c/recordTypes/RNA_Maps.recordType-meta.xml
<RecordType>
    <fullName>RNA_Maps</fullName>
    <active>true</active>
    <label>RNA Maps</label>
</RecordType>